set(External_Path ${PROJECT_SOURCE_DIR}/tinylb/external)

# set(BUILD_SHARED_LIBS OFF)
# add_subdirectory(${External_Path}/SDL_image)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)